--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,4 +2,6 @@
 @import 'partials/global';
 @import 'partials/nav';
 @import 'partials/main';
+@import 'partials/gallery';
 @import 'partials/animation';
+
