--- a/src/assets/scss/partials/_main.scss
+++ b/src/assets/scss/partials/_main.scss
@@ -1,38 +1,15 @@
-.container {
-    @media only screen and (max-width : 480px) {
-        .responsive {
-        width: 100%;
-        padding-bottom: 100%;
-    }
-    }
-    @media only screen and (max-width : 650px) and (min-width 
-        : 481px) {
-        .responsive {
-        width: 50%;
-        padding-bottom: 50%;
-    }
-    }
-    @media only screen and (max-width : 1020px) and (min-width 
-        : 770px) {
-        .responsive {
-        width: 33.3%;
-        padding-bottom: 33.3%;
-    }
-    }
-    @media only screen and (max-width : 1290px) and (min-width 
-        : 1021px) {
-        .responsive {
-        width: 25%;
-        padding-bottom: 25%;
-    }
-    }
-	background-color: $bgcolor;
+.flex-container {
+	background-color: $red;
     color: $gold;
     padding: 0 6px;
-    float: left;
+}
+.howworx {
+    overflow: auto;
+    background-color: $red;
+    color: $gold;
+    box-shadow: 2px 2px 2px 2px $dark; 
 }
 .chicken {
-    display: flex;
     float: left;
     margin-top: -70px;
 }
@@ -41,69 +18,28 @@ h1 {
     text-align: center;
     letter-spacing: 1px;
 }
-p {
-    font-family: 'galada', cursive;
-    text-align: center;
-}
 h2 {
     font-family: 'galada', cursive;
     text-align: center;
     letter-spacing: 2px;
 }
-p1 {
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-}
-ul {
+p {
     font-family: 'galada', cursive;
     text-align: center;
-    text-decoration: none;
 }
-.thumbnail {
-    max-width: 40%;
+.plan {
+    width: 75%;
+    overflow: hidden;
+    margin: auto;
 }
-.gallery {
-    width: 1000px;
-    margin: 100px auto;
-    padding: 10px;
-    background: $red;
-    box-shadow: 2px 2px 2px 2px darkred;
-}
-.gallery > div {
-    position: relative;
-    float: right;
-    padding: 5px;
-}
-.gallery > div > img {
-    display: block;
-    width: 320px;
-    transition: .1s transform;
-    transform: translateZ(0);
-} 
-.gallery > div:hover {
-    z-index: 1;
-} 
-.gallery > div:hover > img {
-    transform: scale(1.7,1.7);
-    transition: .3s transform;
-}
-.cf:before, .cf:after {
-    display: table;
-    content: "";
-    line-height: 0;
-}
-.cf:after {
-    clear: both;
-}
-.menu {
-    display: flex;
-    float: left;
-    justify-content: center
+.plan img {
+    padding: 20px;
+    align-items: center;
 }
 .button {
     color: rgb(175, 0, 0);
-    font-size: 20px;
-    padding: 20px;
+    font-size: 14px;
+    padding: 10px;
     text-shadow: 0px -1px 0px rgba(30, 30, 30, 0.8);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -119,10 +55,127 @@ ul {
     box-shadow:         0px 2px 1px rgba(50, 50, 50, 0.75);
     text-decoration: none;
 }
-.reviews {
-    text-decoration: none
+footer {
+    display: flex;
+    align-content: flex-end;
+    padding-top: 10px;
 }
-.contact > img {
+div.copy {
     display: flex;
     justify-content: flex-end;
+    width: auto;
+    font-size: 12px;
+}
+div.contact {
+    display: flex;
+    color: $gold;
+        @media screen and (min-width: 600px){
+            padding-left: 250px;
+        }
+}
+.fab {
+    display: flex;
+    // position: relative;
+    flex-direction: row-reverse;
+    margin-left: 10px;
+    float: right;
+    color: $gold;
+}
+.clearfix {
+    overflow: auto;
+}
+ 
+// start signup css
+  * {box-sizing: border-box}
+
+/* Full-width input fields */
+  input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: $dark;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+  background-color: $dark;
+  outline: none;
+}
+
+hr {
+  border: 1px solid $dark;
+  margin-bottom: 25px;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: $gold;
+  color: $dark;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+button:hover {
+  opacity:1;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  padding: 14px 20px;
+  background-color: $dark;
+  color: $gold;
+}
+
+/* Float cancel and signup buttons and add an equal width */
+.cancelbtn, .signupbtn {
+  float: left;
+  width: 50%;
+}
+
+/* Add padding to container elements */
+.container {
+  padding: 16px;
+}
+
+/* Clear floats */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Change styles for cancel button and signup button on extra small screens */
+@media screen and (max-width: 300px) {
+  .cancelbtn, .signupbtn {
+    width: 100%;
+  }
+}
+// end form css
+
+
+
+// bottom div
+// .reviews {
+//     display: flex;
+//   }
+@media (min-width: 600px) {
+  .bottom {
+    display: flex;
+}
+}
+// @media (min-width: 600px) {
+//   .container {
+//     width: 50%;
+// }
+// }
+div.reviews {
+    flex: 1;
+    flex-wrap: wrap;
+    justify-content: center;
+    box-shadow: 2px 2px 2px 2px $dark;
 }
