--- a/src/assets/scss/partials/_nav.scss
+++ b/src/assets/scss/partials/_nav.scss
@@ -2,7 +2,7 @@
   overflow: hidden;
   background-color: $red;
   color: $gold;
-  box-shadow: 2px 2px 1px 1px darkred; 
+  box-shadow: 2px 2px 1px 1px $dark; 
 }
 .logo {
 display: flex;
@@ -22,7 +22,31 @@ float: left;
   background-color: $gold;
   color: $red;
 }
+.topnav .icon {
+  display: none;
+}
 .active {
   background-color: $red;
   color: $gold;
+}
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
